Fix spacing on checkboxes sign up form

--- a/app/assets/stylesheets/newflow_layout.scss
+++ b/app/assets/stylesheets/newflow_layout.scss
@@ -463,10 +463,6 @@ input.has-error {
             input[type=checkbox] {
                 width:  1.4rem;
                 height: 1.4rem;
-
-                + span {
-                    margin-left: 1rem;
-                }
             }
         }
     }
